# go-capture

./: CMakeLists.txt  README.md  go.mod  main.go
CaptureLib/: CMakeLists.txt  CaptureLib.cpp  CaptureLib.h
CaptureTest/: CMakeLists.txt  main.cpp
examples/: main.go
